# trill

./: ALL_FIXES_SUMMARY.md  CREDITS.md  Cargo.toml  DELIVERY_SUMMARY.md  FINAL_BUILD_FIX.md  MIGRATION_COMPLETE.txt  MIGRATION_SUMMARY.md  README.md  TANGO_PYTHON_OVERVIEW.md  VOICE_PLAYBACK_FIXES.md  VOICE_PLAYBACK_IMPLEMENTATION.md
.github/workflows/: release.yaml
getgud/src/: session.rs
libdatachannel/src/: lib.rs
linux/: build.sh  build_arm64.sh  build_arm64_1804docker.sh  build_armhf.sh  build_i686.sh
macos/: Info.plist.mako  build.sh  dmgbuild.settings.py
mgba/src/: log.rs
tango/: Cargo.toml  build.rs
tango-pvp/tests/golden/: mod.rs
tango-signaling/: build.rs
tango-signaling-server/: .dev.vars  Dockerfile.workerd  WORKERD_DEPLOYMENT.md  WORKERD_QUICKSTART.md  deploy-workerd.sh  docker-compose.workerd.yml  nginx.conf  package-lock.json  workerd.toml  wrangler.toml
tango-signaling-server-python/: .env.example  .gitignore  Dockerfile  IMPLEMENTATION.md  INDEX.md  MIGRATION.md  QUICKSTART.md  README.md  SUMMARY.md  VPS_DEPLOYMENT.md  VPS_DEPLOYMENT_SUMMARY.md  VPS_QUICKREF.md  app.py  build.py  config.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  signaling_pb2.py  trilld.service.example
tango-signaling-server-python/scripts/: health-check.sh  monitor.sh  setup-vps.sh  update.sh
tango-signaling-server-python/tests/: __init__.py  test_websocket.py
tango-signaling-server-rs/: Cargo.toml
tango-signaling-server-rs/src/: main.rs  matchmaking.rs
tango-signaling-server-tencent-scf/: .env.example  .gitignore  BUILD_FIX_SUMMARY.md  BUILD_TROUBLESHOOTING.md  CONSOLE_UPLOAD.md  DEPLOYMENT.md  FIX_APPLIED.txt  LINUX_BUILD_FIX.md  MANUAL_ZIP_GUIDE.md  PBJS_CORRECT_SYNTAX.md  PBJS_FIX_APPLIED.txt  PBJS_SYNTAX_FIX.md  QUICKSTART.md  README.md  SETUP_CHECKLIST.md  ZIP_UPLOAD_SUMMARY.txt  package.json  prepare-deployment.ps1  prepare-deployment.sh  serverless.yml
tango-signaling-server-tencent-scf/src/: index.ts  scf-handler.ts
tango-signaling-server/src/: index.ts
tango/locales/de-DE/: main.ftl
tango/locales/en-US/: main.ftl
tango/locales/es-419/: main.ftl
tango/locales/fr-FR/: main.ftl
tango/locales/ja-JP/: main.ftl
tango/locales/ko-KR/: main.ftl
tango/locales/nl-NL/: main.ftl
tango/locales/pt-BR/: main.ftl
tango/locales/ru-RU/: main.ftl
tango/locales/vi-VN/: main.ftl
tango/locales/zh-CN/: games.ftl  main.ftl
tango/locales/zh-TW/: games.ftl  main.ftl
tango/src/: app.rs  config.rs  discord.rs  i18n.rs  identity.rs  main.rs  pvp_session.rs  randomcode.rs  sdl_init.rs  session.rs  theme.rs  updater.rs  widgets.rs
tango/src/app/: mod.rs  update.rs
tango/src/audio/: mod.rs  oneshot.rs  sdl.rs  voice.rs
tango/src/discord/: mod.rs
tango/src/save_view/navicust/: mod.rs
tango/src/session/: border.rs  mod.rs  view.rs
tango/src/tabs/: settings.rs
tango/src/tabs/play/: mod.rs
tango/src/video/: border.rs  mod.rs
win/: build.sh  build_arm64.sh  build_i686.sh  installer.nsi.mako
