[workspace]
resolver = "2"
members = [
    "bps",
    "mgba",
    "getgud",
    "tango",
    "tango-dataview",
    "tango-filesync",
    "tango-gamedb",
    "tango-pvp",
    "tango-replaytool",
    "tango-rtc",
    "tango-signaling",
    "tango-signaling-server-rs",
]
# Vendored, patched fork of sctp-proto (str0m's SCTP). Not a workspace member —
# it's pulled in only via the `[patch.crates.io]` below. See its TANGO PATCH
# comments (cwnd floor + RTO/SACK tuning for real-time loss tolerance).
exclude = ["vendor/sctp-proto"]

# Override str0m's `sctp-proto` dependency with the vendored, patched copy. str0m
# hardcodes its SCTP transport config, so the loss-tolerance tuning has to live
# in sctp-proto itself.
[patch.crates-io]
sctp-proto = { path = "vendor/sctp-proto" }

# `release` keeps Cargo's defaults (lto = false, codegen-units = 16) so
# iterative release builds and `cargo run --release` stay cheap. Shipped
# binaries use the `release-dist` profile below — the platform build scripts
# (win/macos/linux) pass `--profile release-dist`.
#
# For a CPU-bound emulator the hot Rust paths (mgba fastforwarder, getgud
# rollback, stepper) benefit measurably from cross-crate inlining. Thin LTO
# gets most of fat LTO's runtime win at a fraction of the build-time cost;
# codegen-units = 1 maximizes per-crate optimization of the tight loops.
# mgba's C side is unaffected (it's a separate cmake static lib already built
# -O3 -DNDEBUG).
[profile.release-dist]
inherits = "release"
lto = "thin"
codegen-units = 1

[workspace.lints.clippy]
new_without_default = "allow"
type_complexity = "allow"
identity_op = "allow"
blocks_in_conditions = "allow"
redundant_closure = "allow"
too_many_arguments = "allow"
needless_lifetimes = "allow"
