[workspace]
resolver = "2"
members = [
    "bps",
    "datachannel-wrapper",
    "libdatachannel",
    "mgba",
    "getgud",
    "tango",
    "tango-dataview",
    "tango-filesync",
    "tango-gamedb",
    "tango-pvp",
    "tango-replaytool",
    "tango-signaling",
]

# `release` keeps Cargo's defaults (lto = false, codegen-units = 16) so
# iterative release builds and `cargo run --release` stay cheap. Shipped
# binaries use the `release-dist` profile below — the platform build scripts
# (win/macos/linux) pass `--profile release-dist`.
#
# For a CPU-bound emulator the hot Rust paths (mgba fastforwarder, getgud
# rollback, stepper) benefit measurably from cross-crate inlining. Thin LTO
# gets most of fat LTO's runtime win at a fraction of the build-time cost;
# codegen-units = 1 maximizes per-crate optimization of the tight loops.
# mgba's C side is unaffected (it's a separate cmake static lib already built
# -O3 -DNDEBUG).
[profile.release-dist]
inherits = "release"
lto = "thin"
codegen-units = 1

# ring 0.16.20 has no pre-generated assembly for aarch64-pc-windows-msvc and
# its build script falls back to compiling C that uses x86 intrinsics (BN_ULLONG,
# _addcarry_u64, ...) the ARM64 MSVC compiler doesn't have, so the build fails.
# See https://github.com/briansmith/ring/issues/1514. ring never backported a
# fix to the 0.16 line (Windows ARM64 support landed in 0.17), so we override
# 0.16.20 with the community fork that ships the missing win-arm64 pregenerated
# objects. The change is additive for that target; other platforms keep using
# their existing pregenerated files and build unchanged.
[patch.crates-io]
ring = { git = "https://github.com/awakecoding/ring", branch = "0.16.20_alpha" }

[workspace.lints.clippy]
new_without_default = "allow"
type_complexity = "allow"
identity_op = "allow"
blocks_in_conditions = "allow"
redundant_closure = "allow"
too_many_arguments = "allow"
needless_lifetimes = "allow"
