[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tango-signaling-server-python"
version = "0.1.0"
description = "Python implementation of the Tango signaling server for WebRTC"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Tango Contributors"}
]

dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.0",
    "websockets==14.1",
    "protobuf==5.28.0",
    "aiohttp==3.10.0",
    "python-multipart==0.0.6",
    "gunicorn==23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.0.0",
    "pytest-asyncio==0.23.0",
    "black==24.1.0",
    "ruff==0.3.0",
    "mypy==1.8.0",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
